--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 					</g>
 				</svg></a><a id="menu-home" href="/">PDGMG</a>
 			<ul class="nav">
+				<li><a href="/">About</a></li>
 				<li><a href="labeldrinkers/">Formats</a></li>
-				<li><a href="#">About Us</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
-			<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/ENnixTCoSjn"
-				 target="_blank">Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
+			<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
+				 target="_blank">c/o Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 		</nav>
 	</header>
 	<section class="container-fluid" id="banner">
@@ -136,13 +136,13 @@
 			</div>
 		</div>
 		<div class="row faded">
-			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnering<br>
+			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnerships<br>
 				
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Come visit us<br>
 			
-				<br><a href="goog.le">Twenty Studios<br>Rådmansgatan 20<br>Stockholm, Sweden</a>
+				<br><a href="https://goo.gl/maps/Jo3cg4GkaCC2" target="_blank">c/o Twenty Studios<br>Rådmansgatan 20<br>Stockholm, Sweden</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-6 text-right clockc"><span id="clock"></span></div>
 		</div>
