--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -47,12 +47,12 @@
 								</g>
 							</svg></a><a id="menu-home" href="../">PDGMG</a>
 						<ul class="nav">
-							<li><a href="labeldrinkers/">Formats</a></li>
-							<li><a href="../">About Us</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="../">About</a></li>
+							<li><a href="/">Formats</a></li>
+							<li><a href="../#contact">Contact</a></li>
 						</ul>
-						<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/ENnixTCoSjn"
-							 target="_blank">Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
+						<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
+							 target="_blank">c/o Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 					</nav>
 	</header>
 	<section class="container-fluid">
@@ -84,9 +84,8 @@
 			<div class="row">
 				<div class="col-xs-10 col-md-10">			
 				<p style="color: orange">Label Drinkers fusion of education and entertainment invites the viewers into the journey of appreciating the best of both worlds.</p>
-
 				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of Champagne. Finding our hosts revealing untold stories and busting myths, challenged by the best experts in their field, creating unexpected, controversial and thrilling situations - meeting producers, personalities, stars and celebrities in legendary venues and locations around the globe.</p>
-
+				<img src="../assets/img/list-placeholder.png" class="img-fluid" alt="">
 				<p>Exploring the ultimate Champagne experience in the travel-, hospitality- and gastronomical industry, while simultaneously covering historical revelations and trends that over centuries have cemented Champagne as the no.1 beverage of them all. </p>
 				</div>
 			</div>
@@ -104,7 +103,7 @@
 						<a class="footer" href="https://www.imdb.com/name/nm1636869">IMDb</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
-						 <span class="footer">Producer and storytelling strengths with proven work beyond the traditional</span>
+						 <span class="footer">Producer and storytelling strengths with proven work beyond the traditional.</span>
 					</div>
 					<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
@@ -129,7 +128,7 @@
 							<a class="footer" href="https://www.imdb.com/name/nm0252417">IMDb</a></div>
 						<div class="img-container" style="background-image: url('../assets/images/bernte.jpg');"><img src="../assets/img/list-placeholder.png"
 							 class="img-fluid" alt=""></div>
-							 <span class="footer">25 years experience and involved in most drama productions in Sweden</span>
+							 <span class="footer">25 years experience and involved in most drama productions in Sweden.</span>
 					</div>
 					<div class="minimove col-lg-3 project-item">
 							<div class="proj-category tag faded"></div>
@@ -152,6 +151,9 @@
 						<li>Contact us for more info</li>
 					</ul>
 			</div>
+			<div class="col-lg-3"><img src="../assets/images/airplane.jpg" class="img-fluid" alt=""></div>
+			<div class="col-lg-3"><img src="../assets/images/airplane.jpg" class="img-fluid" alt=""></div>
+
 		</div>
 	</section>
 	<section class="container-fluid nopb">
@@ -161,13 +163,13 @@
 			</div>
 		</div>
 		<div class="row faded">
-			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnering<br>
+			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnerships<br>
 				
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Come visit us<br>
 			
-				<br><a href="goog.le">Twenty Studios<br>Rådmansgatan 20<br>Stockholm, Sweden</a>
+				<br><a href="https://goo.gl/maps/Jo3cg4GkaCC2" target="_blank">c/o Twenty Studios<br>Rådmansgatan 20<br>Stockholm, Sweden</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-6 text-right clockc"><span id="clock"></span></div>
 		</div>
