--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -48,8 +48,8 @@
 							</svg></a><a id="menu-home" href="../">PDGMG</a>
 						<ul class="nav">
 							<li><a href="../">About</a></li>
-							<li><a href="/">Formats</a></li>
-							<li><a href="../#contact">Contact</a></li>
+							<li><a href="#">Formats</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 						<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
 							 target="_blank">c/o Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
