--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="row">
 				<div class="col-12 col-md-10">
 					<h2 class="h1">Business Driven Creativity</h2>
-					<p>Innovative experiences in business development brought to the world of content creation. We add new businesses on top of traditional businesses to redefine conventional industries and push technological boundaries. We constantly challenges the standards of a digital company.</p>
+					<p>Innovative experiences in business development brought to the world of content creation. We add new revenues to traditional businesses to redefine conventional industries and push technological boundaries. We constantly challenges the standards of a digital company.</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
