--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -76,7 +76,7 @@
 			<div class="row">
 				<div class="col-xs-10 col-md-10">
 					<p>
-					When most TV shows explore the art, creation, and philosophy behind food in the kitchen, Label Drinkers engage the audience in a journey that digs in-depth and beyond the kitchen inventions. By exploring eccentric consumption behaviours, the industry that supports it, and the variety of myths and legends covering this seasons prime beverage - Champagne.</p>
+					When most TV shows explore the art, creation, and philosophy behind food in the kitchen, Label Drinkers engage the audience in a journey that digs in depth and beyond the kitchen inventions. By exploring eccentric consumption behaviours, the industry that supports it, and the variety of myths and legends covering this seasons prime beverage - Champagne.</p>
 					<p>
 					The viewer will be introduced to the extraordinary excess that originates from the glamorous stories embracing Champagne, together with our recognized hosts experience everything down to the very nerdy details, satisfying the most prestigious taster or enthusiast.</p>				
 				</div>
@@ -98,46 +98,54 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="row"><div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
+				<div class="proj-category tag faded"></div>
 					<div class="proj-info">Mikael Flodell<br>Series Director<br>
 						<a class="footer" href="https://www.imdb.com/name/nm1636869">IMDb</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png"
-						 class="img-fluid" alt=""></div>
+					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
 						 <span class="footer">Producer and storytelling strengths with proven work beyond the traditional.</span>
-					</div>
-					<div class="minimove col-lg-3 project-item">
+				</div>
+				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
 					<div class="proj-info">Roy Rossovitch<br>DOP & Cinematographer<br>
 						<a class="footer" href="https://www.imdb.com/name/nm2627488">IMDb</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/roy.jpg');"><img src="../assets/img/list-placeholder.png"
-						 class="img-fluid" alt=""></div>
+					<div class="img-container" style="background-image: url('../assets/images/roy.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
 						 <span class="footer">Cinematographer that travels the world to do feature films, global documentaries & series.</span>
-					</div>
+				</div>
 				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
 					<div class="proj-info">Josefine Rosengren Karpinski<br>Line Producer<br>
 						<a class="footer">&nbsp;</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/josefine.jpg');"><img src="../assets/img/list-placeholder.png"
-						 class="img-fluid" alt=""></div>
+					<div class="img-container" style="background-image: url('../assets/images/josefine.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
 						 <span class="footer">SONY Pictures, Columbia Pictures, Monkberry, ACNE Film & Sommelier</span>
 				</div>
-
-					<div class="minimove col-lg-3 project-item">
-						<div class="proj-category tag faded"></div>
-						<div class="proj-info">Bernt Ekelund<br>Supervising Sound Editor<br>
-							<a class="footer" href="https://www.imdb.com/name/nm0252417">IMDb</a></div>
-						<div class="img-container" style="background-image: url('../assets/images/bernte.jpg');"><img src="../assets/img/list-placeholder.png"
-							 class="img-fluid" alt=""></div>
-							 <span class="footer">25 years experience and involved in most drama productions in Sweden.</span>
-					</div>
-					<div class="minimove col-lg-3 project-item">
-							<div class="proj-category tag faded"></div>
-							<div class="proj-info">Todd Daugherty<br>VFX Supervisor<br>
-								<a class="footer" href="https://www.imdb.com/name/nm1562987">IMDb</a></div>
-							<div class="img-container" style="background-image: url('../assets/images/todd.jpg');"><img src="../assets/img/list-placeholder.png"
-								 class="img-fluid" alt=""></div>
-								 <span class="footer">Paradox Interactive, Digital Domain, Technicolor, Blur Studios</span>
-							</div>
+				<div class="minimove col-lg-3 project-item">
+					<div class="proj-category tag faded"></div>
+					<div class="proj-info">Bernt Ekelund<br>Supervising Sound Editor<br>
+						<a class="footer" href="https://www.imdb.com/name/nm0252417">IMDb</a></div>
+					<div class="img-container" style="background-image: url('../assets/images/bernte.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
+						 <span class="footer">25 years experience and involved in most drama productions in Sweden.</span>
+				</div>
+				<div class="minimove col-lg-3 project-item">
+					<div class="proj-category tag faded"></div>
+					<div class="proj-info">Todd Daugherty<br>VFX Supervisor<br>
+						<a class="footer" href="https://www.imdb.com/name/nm1562987">IMDb</a></div>
+					<div class="img-container" style="background-image: url('../assets/images/todd.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
+						 <span class="footer">Paradox Interactive, Digital Domain, Technicolor, Blur Studios</span>
+				</div>
+				<div class="minimove col-lg-3 project-item">
+					<div class="proj-category tag faded"></div>
+					<div class="proj-info">Björnstierne Antonsen<br>Editorial & Expert<br>
+						<a class="footer">&nbsp;</a></div>
+					<div class="img-container" style="background-image: url('../assets/images/bj.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
+						 <span class="footer">Champagne Sommelier, Swedish Sommelier Champion 2003, World Wine Decanter Judge.</span>
+				</div>
+				<div class="minimove col-lg-3 project-item">
+					<div class="proj-category tag faded"></div>
+					<div class="proj-info">Andreas Larsson<br>Editorial & Expert<br>
+						<a class="footer">&nbsp;</a></div>
+					<div class="img-container" style="background-image: url('../assets/images/andreas.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
+						 <span class="footer">Best Sommelier of the World 2007, Ruinart European Sommelier 2004, Meilleur Sommelier de Suède 2003...</span>
+				</div>
 			</div>
 		</section>
 	
