--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Paradigm Group | Content creation, re-invented.</title>
-	<meta name="keywords" content="design, branding, branding strategy, corporate identity, brand development, brand strategy, brand, branding agency, branding and identities, web, UX, UI, software, development, engineering, IoT, smart city, research">
-	<meta name="description" content="Research, design practice and software development.">
-	<meta property="og:site_name" content="Anagrama">
+	<meta name="keywords" content="content, creation, label, drinkers, series, tv, shows, champagne, beverage, gastronomy, label drinkers, tv-shows">
+	<meta name="description" content="Paradigm Group - Content Creation Re-invented.">
+	<meta property="og:site_name" content="Paradigm">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://www.anagrama.ro/">
-	<meta property="og:title" content="Anagrama">
-	<meta property="og:description" content="Research, design practice and software development.">
-	<meta property="og:image" content="https://www.anagrama.ro/assets/images/A_FB_LI.jpg">
+	<meta property="og:url" content="https://pdgmg.com">
+	<meta property="og:title" content="Paradigm">
+	<meta property="og:description" content="Paradigm Group - Content Creation Re-invented.">
+	<meta property="og:image" content="#">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<link href="assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
@@ -86,13 +86,13 @@
 			</div>
 			<div class="row"><div class="minimove col-lg-4 project-item">
 					<div class="proj-category tag"></div>
-					<div class="proj-info">Monir Eriksson<br>Content Creator, Author</div>
+					<div class="proj-info">Monir Eriksson<br>Content Creator & Author</div>
 					<div class="img-container" style="background-image: url('assets/images/monir.jpg');"><img src="assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 						 <p class="footer"><br>With over 20 years experience in productions from Endemol Shine, Warner Bros and recently created worlds first interactive e-sport reality series now creates exclusive global edu-tainment.</p>
 					</div><div class="minimove col-lg-4 project-item">
 					<div class="proj-category tag"></div>
-					<div class="proj-info">Jürgen Buchmann<br>Content Creator, Author</div>
+					<div class="proj-info">Jürgen Buchmann<br>Content Creator & Author</div>
 					<div class="img-container" style="background-image: url('assets/images/jb.jpg');"><img src="assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 						 <p class="footer"><br>Adding 20 years additional experience with several startups and more recently mastering Digital Transformation in various businesses, Jürgen have a great reportoar of shaping businesses to use new methodologies.</p>
