--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -6,10 +6,10 @@
 				<title>Label Drinkers by Paradigm</title>
 				<meta name="keywords" content="">
 				<meta name="description" content="">
-				<meta property="og:site_name" content="Anagrama">
+				<meta property="og:site_name" content="Paradigm">
 				<meta property="og:type" content="website">
-				<meta property="og:url" content="https://www.anagrama.ro/projects/what-the-street">
-				<meta property="og:title" content="moovel Group What the Street?!">
+				<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
+				<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
 				<meta property="og:description" content="">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
