--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -30,14 +30,14 @@
 <body class="animated"><a name="top" id="top"></a>
 	<header>
 			<div class="container-fluid"><a href="../" class="logo">Paradigm</a><a id="menu-open"><svg class="svg-icon"
-							 version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px"
 							 viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
 								<g>
 									<path style="fill:#FFFFFF;" d="M0,14v2h40v-2H0z M0,26h40v-2H0V26z" />
 								</g>
 								<rect style="fill:none;" width="40" height="40" />
 							</svg></a></div>
-					<nav id="nav"><a id="menu-close"><svg class="svg-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+					<nav id="nav"><a id="menu-close"><svg class="svg-icon" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"
 							 x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
 								<g>
 									<g>
@@ -218,8 +218,8 @@
 				<div class="col-lg-3">©2018, Paradigm Group.</div>
 				<div class="col-lg-3"><a href="../terms.html">Terms and conditions</a></div>
 				<div class="col-lg-3"><a href="../cookie.html">Cookie policy</a></div>
-				<div class="col-lg-3"><a href="#top" class="gotop"><svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-						 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;"
+				<div class="col-lg-3"><a href="#top" class="gotop"><svg version="1.1" xmlns="https://www.w3.org/2000/svg"
+						 xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;"
 						 xml:space="preserve">
 							<g>
 								<g>
