--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -159,9 +159,13 @@
 						<li>Contact us for more info</li>
 					</ul>
 			</div>
-			<div class="col-lg-3"><img src="../assets/images/airplane.jpg" class="img-fluid" alt=""></div>
-			<div class="col-lg-3"><img src="../assets/images/airplane.jpg" class="img-fluid" alt=""></div>
-
+			<div class="col-lg-5">
+					<video playsinline autoplay muted loop>
+							<source src="../assets/videos/loop.mp4" type="video/mp4">
+							  <param name="allowFullScreen" value="true"/>
+							  <param name="allowscriptaccess" value="always"/>
+					</video>
+			</div>
 		</div>
 	</section>
 	<section class="container-fluid nopb">
