--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@
 			</div>
 			<div class="clearfix"></div>
 		</div>
-		<div class="row"><a href="labeldrinkers/" class="minimove col-lg-6 project-item">
+		<div class="row">
+			<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">EDUTAINMENT</div>
 				<div class="proj-info">Label Drinkers<br>The gastronomical equivalent to "Top Gear"</div>
-				<div class="img-container" style="background-image: url('assets/images/hosts.jpg');"><img src="assets/img/list-placeholder.png"
-					 class="img-fluid" alt=""></div>
-					</a>
-<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
-			<div class="proj-category tag faded">&nbsp;</div>
-			<div class="proj-info">&nbsp;<br>&nbsp;</div>
-			<div class="img-container" style="background-image: url('assets/images/jayz.jpg');"><img src="assets/img/list-placeholder.png"
-				 class="img-fluid" alt=""></div>
-				</a>
+				<div>
+					<video width="772" playsinline autoplay muted loop>
+					<source src="assets/videos/loops.mp4" type="video/mp4">
+						<param name="allowFullScreen" value="true"/>
+						<param name="allowscriptaccess" value="always"/>
+					</video>
+				</div>
+			</a>
 	</div>
 	</section>
 <a name="contact" id="contact"></a>
