--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -160,9 +160,9 @@
 					</ul>
 			</div>
 			<div class="col-lg-5">
-					<video playsinline autoplay muted loop>
-							<source src="../assets/videos/loop.mp4" type="video/mp4">
-							  <param name="allowFullScreen" value="true"/>
+					<video width="640" playsinline autoplay muted loop>
+							<source src="../assets/videos/loops.mp4" type="video/mp4">
+							  <param name="allowFullScreen" value="false"/>
 							  <param name="allowscriptaccess" value="always"/>
 					</video>
 			</div>
