--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 			<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">EDUTAINMENT</div>
 				<div class="proj-info">Label Drinkers<br>The gastronomical equivalent to "Top Gear"</div>
-				<div>
-					<video width="772" playsinline autoplay muted loop>
+				<div class="video">
+					<video playsinline autoplay muted loop>
 					<source src="assets/videos/loops.mp4" type="video/mp4">
 						<param name="allowFullScreen" value="true"/>
 						<param name="allowscriptaccess" value="always"/>
