--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 	<meta name="description" content="Paradigm Group - Content Creation Re-invented.">
 	<meta property="og:site_name" content="Paradigm">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://pdgmg.com">
-	<meta property="og:title" content="Paradigm">
-	<meta property="og:description" content="Paradigm Group - Content Creation Re-invented.">
-	<meta property="og:image" content="#">
+	<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
+	<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
+	<meta property="og:description" content="">
+	<meta property="og:image" content="https://pdgmg.com/assets/img/thumb.jpg" />
+	<meta itemprop="name" content="Paradigm">
+	<meta itemprop="description" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
+	<meta itemprop="image" content="https://pdgmg.com/assets/img/thumb.jpg">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<link href="assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
@@ -19,7 +22,7 @@
 	<script>
 		if (typeof fuel == 'undefined') fuel = {}
 	</script>
-	<link href="https://www.anagrama.ro/cms/modules/fuel/assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
+	<link href="assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
 </head>
 
 <body><a name="top" id="top"></a>
@@ -46,7 +49,7 @@
 				<li><a href="labeldrinkers/">Formats</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
-			<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
+			<div class="menu-info"><a href="mailto:info@pdgmg.com" class="fs30">info@pdgmg.com</a><br><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
 				 target="_blank">c/o Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 		</nav>
 	</header>
@@ -137,7 +140,7 @@
 		</div>
 		<div class="row faded">
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnerships<br>
-				
+				<br><a href="mailto:info@pdgmg.com">info@pdgmg.com</a>
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Come visit us<br>
@@ -201,7 +204,7 @@
 	<script src="assets/js/jquery.lazy-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/main-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 
-	<script src="https://www.anagrama.ro/cms/modules/fuel/assets/js/fuel/fuel_inline.min.js?c=1524092400" type="text/javascript"
+	<script src="assets/js/fuel_inline.min.js?c=1524092400" type="text/javascript"
 	 charset="utf-8"></script>
 </body>
 
