--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -11,6 +11,10 @@
 				<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
 				<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
 				<meta property="og:description" content="">
+				<meta property="og:image" content="https://pdgmg.com/assets/img/thumb.jpg" />
+				<meta itemprop="name" content="Paradigm">
+				<meta itemprop="description" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
+				<meta itemprop="image" content="https://pdgmg.com/assets/img/thumb.jpg">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 				<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -25,7 +29,7 @@
 				<script>
 					if (typeof fuel == 'undefined') fuel = {}
 				</script>
-				<link href="https://www.anagrama.ro/cms/modules/fuel/assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
+				<link href="..assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
 			</head>
 <body class="animated"><a name="top" id="top"></a>
 	<header>
@@ -51,7 +55,7 @@
 							<li><a href="#">Formats</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
-						<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
+						<div class="menu-info"><a href="mailto:info@pdgmg.com" class="fs30">info@pdgmg.com</a><br><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
 							 target="_blank">c/o Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 					</nav>
 	</header>
@@ -61,7 +65,8 @@
 				<div class="col-md-3">
 					<ul>
 						<li class="faded">Unscripted</li>
-						<li>EDUTAINMENT</li>
+						<li>ENTERTAINMENT</li>
+						<li>[EDUTAINMENT]</li>
 						<li class="faded">2018</li>
 					</ul>
 				</div>
@@ -134,10 +139,10 @@
 				</div>
 				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Björnstierne Antonsen<br>Editorial & Expert<br>
+					<div class="proj-info">Björnstierne Antonson<br>Editorial & Expert<br>
 						<a class="footer">&nbsp;</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/bj.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">Champagne Sommelier, Swedish Sommelier Champion 2003, World Wine Decanter Judge.</span>
+						 <span class="footer">The Champagne Sommelier, Swedish Sommelier Champion 2003, Decanter World Wine Awards Judge.</span>
 				</div>
 				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
@@ -178,7 +183,7 @@
 		</div>
 		<div class="row faded">
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnerships<br>
-				
+				<br><a href="mailto:info@pdgmg.com">info@pdgmg.com</a>				
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Come visit us<br>
@@ -242,7 +247,7 @@
 	<script src="../assets/js/jquery.lazy-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="../assets/js/main-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 
-	<script src="https://www.anagrama.ro/cms/modules/fuel/assets/js/fuel/fuel_inline.min.js?c=1524092400" type="text/javascript"
+	<script src="../assets/js/fuel_inline.min.js?c=1524092400" type="text/javascript"
 	 charset="utf-8"></script>
 </body>
 </html>
