--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
 		<div class="row">
 			<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
-				<div class="proj-category tag faded">EDUTAINMENT</div>
+				<div class="proj-category tag faded">ENTERTAINMENT<br>[EDUTAINMENT]</div>
 				<div class="proj-info">Label Drinkers<br>The gastronomical equivalent to "Top Gear"</div>
 				<div class="video">
 					<video playsinline autoplay muted loop>
