--- a/investors/index.html
+++ b/investors/index.html
@@ -2,7 +2,7 @@
 <html class="staticrypt-html">
 		<head>
 				<meta charset="utf-8">
-				<title>Partnership Login | Paradigm Group</title>
+				<title>Investor Relations | Paradigm Group</title>
 				<meta name="keywords" content="">
 				<meta name="description" content="">
 				<meta property="og:site_name" content="Paradigm">
@@ -25,94 +25,15 @@
 					if (typeof fuel == 'undefined') fuel = {}
 				</script>
 				<link href="..assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
-    <style>
-        .staticrypt-hr {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            border: 0;
-            border-top: 1px solid orange;
-        }
-
-        .staticrypt-page {
-            width: 360px;
-            padding: 0;
-            margin: auto;
-            box-sizing: border-box;
-        }
-
-        .staticrypt-form {
-            position: relative;
-            z-index: 1;
-            background: ;
-            max-width: 360px;
-            padding: 45px;
-            text-align: center;
-            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-        }
-
-        .staticrypt-form input {
-            outline: 0;
-            background: #f2f2f2;
-            width: 100%;
-            border: 0;
-            margin: 0 0 15px;
-            padding: 15px;
-            box-sizing: border-box;
-            font-size: 14px;
-        }
-
-        .staticrypt-form .staticrypt-decrypt-button {
-            text-transform: uppercase;
-            outline: 0;
-            background: orange;
-            width: 100%;
-            border: 0;
-            padding: 15px;
-            color: #FFFFFF;
-            font-size: 14px;
-            cursor: pointer;
-        }
-
-        .staticrypt-form .staticrypt-decrypt-button:hover, .staticrypt-form .staticrypt-decrypt-button:active, .staticrypt-form .staticrypt-decrypt-button:focus {
-            background: darkorange;
-        }
-
-        .staticrypt-html {
-            height: 100%;
-        }
-
-        .staticrypt-body {
-            margin-bottom: 1em;
-            background: #76b852; /* fallback for old browsers */
-            background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-            background: -moz-linear-gradient(right, #76b852, #8DC26F);
-            background: -o-linear-gradient(right, #76b852, #8DC26F);
-            background: linear-gradient(to left, #76b852, #8DC26F);
-            font-family: "Arial", sans-serif;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        .staticrypt-instructions {
-            margin-top: -1em;
-            margin-bottom: 1em;
-        }
-
-        .staticrypt-title {
-            font-size: 1.5em;
-        }
-    </style>
 </head>
-
 <body class="animated">
 		<header>
 				<div class="container-fluid"><a href="../" class="logo">Paradigm</a></div>
-
 		</header>
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="proj-info">
-            <h2 class="tag" style="text-align:left">Welcome to<br>Paradigm Group<br>Partnership<br>Login</h2>
+            <h2 class="login">Welcome to<br>Paradigm Group<br>Investor<br>Login</h2>
         </div>
 
         <hr class="staticrypt-hr" style="color: orange">
