--- a/partners/index.html
+++ b/partners/index.html
@@ -5,7 +5,7 @@
 				<title>Partnership Login | Paradigm Group</title>
 				<meta name="keywords" content="">
 				<meta name="description" content="">
-				<meta property="og:site_name" content="Paradigm">
+				<meta property="og:site_name" content="Paradigm Group | Content creation, re-invented.">
 				<meta property="og:type" content="website">
 				<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
 				<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
