--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<meta name="description" content="Paradigm Group - Content Creation Re-invented.">
 	<meta property="og:site_name" content="Paradigm">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
-	<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
+	<meta property="og:url" content="https://pdgmg.com/">
+	<meta property="og:title" content="Paradigm Group | Content creation, re-invented.">
 	<meta property="og:description" content="">
-	<meta property="og:image" content="https://pdgmg.com/assets/img/thumb.jpg" />
+	<meta property="og:image" content="https://pdgmg.com/assets/img/thumb.gif" />
 	<meta itemprop="name" content="Paradigm">
-	<meta itemprop="description" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
-	<meta itemprop="image" content="https://pdgmg.com/assets/img/thumb.jpg">
+	<meta itemprop="description" content="Paradigm Group | Content creation, re-invented.">
+	<meta itemprop="image" content="https://pdgmg.com/assets/img/thumb.gif">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<link href="assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
