--- a/investors/index.html
+++ b/investors/index.html
@@ -5,10 +5,10 @@
 				<title>Investor Relations | Paradigm Group</title>
 				<meta name="keywords" content="">
 				<meta name="description" content="">
-				<meta property="og:site_name" content="Paradigm">
+				<meta property="og:site_name" content="Paradigm Group | Content creation, re-invented.">
 				<meta property="og:type" content="website">
-				<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
-				<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
+				<meta property="og:url" content="https://pdgmg.com/">
+				<meta property="og:title" content="Paradigm Group | Content creation, re-invented.">
 				<meta property="og:description" content="">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
