--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -6,15 +6,15 @@
 				<title>Label Drinkers by Paradigm</title>
 				<meta name="keywords" content="">
 				<meta name="description" content="">
-				<meta property="og:site_name" content="Paradigm">
+				<meta property="og:site_name" content="Paradigm Group | Content creation, re-invented.">
 				<meta property="og:type" content="website">
 				<meta property="og:url" content="https://pdgmg.com/labeldrinkers">
 				<meta property="og:title" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
 				<meta property="og:description" content="">
-				<meta property="og:image" content="https://pdgmg.com/assets/img/thumb.jpg" />
+				<meta property="og:image" content="https://pdgmg.com/assets/videos/loops.gif" />
 				<meta itemprop="name" content="Paradigm">
 				<meta itemprop="description" content="Label Drinkers - The gastronomical equivalent to 'Top Gear'">
-				<meta itemprop="image" content="https://pdgmg.com/assets/img/thumb.jpg">
+				<meta itemprop="image" content="https://pdgmg.com/assets/videos/loops.gif">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 				<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
