--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 	<meta property="og:url" content="https://pdgmg.com/">
 	<meta property="og:title" content="Paradigm Group | Content creation, re-invented.">
 	<meta property="og:description" content="">
-	<meta property="og:video" content="https://pdgmg.com/assets/img/thumb.gif" />
+	<meta property="og:image" content="https://pdgmg.com/assets/img/thumb.gif" />
 	<meta itemprop="name" content="Paradigm">
 	<meta itemprop="description" content="Paradigm Group | Content creation, re-invented.">
-	<meta itemprop="video" content="https://pdgmg.com/assets/img/thumb.gif">
+	<meta itemprop="image" content="https://pdgmg.com/assets/img/thumb.gif">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<link href="assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
 	<link href="assets/css/main-c=1524092400.css" media="all" rel="stylesheet" />
-	<script>
-		if (typeof fuel == 'undefined') fuel = {}
-	</script>
-	<link href="assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
 </head>
 
 <body><a name="top" id="top"></a>
@@ -103,7 +99,7 @@
 					<div class="minimove col-lg-4 project-item">
 							<div class="proj-category tag"></div>
 							<div class="proj-info">"Your name here"<br>Sales & Marketing Director</div>
-							<div class="img-container" style="background-image: url('assets/images/x.jpg');"><img src="assets/img/list-placeholder.png"
+							<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
 								 <p class="footer"><br>We are looking for a sales & marketing director with a track record in deals and distribution across the industry.</p>
 							</div>
@@ -152,7 +148,7 @@
 		<script>
 			window.time_diff = 0;
 			xhr = new XMLHttpRequest();
-			xhr.open('POST', '/get_time.php');
+			xhr.open('POST', '/get_time');
 			xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
 			xhr.onload = function () {
 				if (xhr.status == 200) {
@@ -203,9 +199,6 @@
 	<script src="assets/js/jquery-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/jquery.lazy-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/main-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-
-	<script src="assets/js/fuel_inline.min.js?c=1524092400" type="text/javascript"
-	 charset="utf-8"></script>
 </body>
 
 </html>
